Fix alignment between 2 and 3 columns layout
This is part of story #10173 Have multiple dashboards

When your dashboard has two lines, one in two-columns-small-big and the
other one in three-columns, then the columns should be aligned.

Instead of:
 +---+  +-------+
 |   |  |       |
 +---+  +-------+
 +--+  +--+  +--+
 |  |  |  |  |  |
 +--+  +--+  +--+

We should have:
 +--+  +--------+
 |  |  |        |
 +--+  +--------+
 +--+  +--+  +--+
 |  |  |  |  |  |
 +--+  +--+  +--+

There is still misalignment in IE11 but we don't care. Because IE.

--- a/src/www/themes/BurningParrot/css/includes/_dashboard-widgets.scss
+++ b/src/www/themes/BurningParrot/css/includes/_dashboard-widgets.scss
@@ -17,6 +17,10 @@
  * along with Tuleap. If not, see <http://www.gnu.org/licenses/>.
  */
 
+.dashboard-widget-container {
+    width: 100%;
+}
+
 .dashboard-widget-header {
     display: flex;
     align-items: center;
